...
		"placeholders": {},
		"comments": ["Subtitle explaining purpose of biometrics"],
		"origin": [["src/features/onboarding/steps.ts", 36]],
		"translation": "Activate the biometrics functionality of your phone to make sure only you can enter your wallet and share data."
	},
	"menu.item.activity": {
		"message": "Activity",
		"placeholders": {},
		"comments": ["Label for activity log"],
		"origin": [["src/features/menu/FunkeMenuScreen.tsx", 129]],
		"translation": "Activity"
	},
	"activity.title": {
...
			"Section heading for list of received cards in the activity detail screen"
		],
		"origin": [["src/features/activity/FunkeActivityDetailScreen.tsx", 161]],
		"translation": "Cards"
	},
	"onboarding.pin.title": {
		"message": "Choose a 6-digit PIN",
		"placeholders": {},
		"comments": ["Heading when user chooses a PIN"],
		"origin": [["src/features/onboarding/steps.ts", 12]],
		"translation": "Choose a 6-digit PIN"
	},
	"onboardingIntroduction.step1.description": {
...
		"placeholders": {},
		"comments": ["The type of credential, usually a complex url structure"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 456]],
		"translation": "Credential type"
	},
	"didx.credentials.title": {
		"message": "Credentials",
		"placeholders": {},
		"comments": [],
		"origin": [["src/features/wallet/DidxCredentialsScreen.tsx", 74]],
		"translation": "Credentials"
	},
	"credentials.emptyDescription": {
...
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 560]],
		"translation": "German"
	},
	"onboardingWelcome.getStarted": {
		"message": "Get Started",
		"placeholders": {},
		"comments": ["Button label to begin onboarding from the welcome screen"],
		"origin": [["src/features/onboarding/screens/welcome.tsx", 18]],
		"translation": "Get Started"
	},
	"onboardingWalletExplanation.getStarted": {
...
		"placeholders": {},
		"comments": ["Button label to open device settings"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 31]],
		"translation": "Go to settings"
	},
	"common.goToWallet": {
		"message": "Go to wallet",
		"placeholders": {},
		"comments": ["Button label to return to the wallet"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 26]],
		"translation": "Go to wallet"
	},
	"button.gotIt": {
...
		"placeholders": {},
		"comments": ["Shown when user declines sharing proof"],
		"origin": [["src/features/share/FunkeMdocOfflineSharingScreen.tsx", 151]],
		"translation": "Proof has been declined"
	},
	"pidSetup.dataProtection.title": {
		"message": "Protect your data",
		"placeholders": {},
		"comments": [],
		"origin": [["src/utils/sharedPidSetup.ts", 25]],
		"translation": "Protect your data"
	},
	"requestPurpose.purposeHeading": {
...
		"placeholders": {},
		"comments": ["The region of a person"],
		"origin": [["../../packages/translations/src/commonMessages.ts", 476]],
		"translation": "Region"
	},
	"onboarding.pinReenter.title": {
		"message": "Repeat your PIN",
		"placeholders": {},
		"comments": ["Heading when user repeats their PIN"],
		"origin": [["src/features/onboarding/steps.ts", 24]],
		"translation": "Repeat your PIN"
	},
	"inbox.notificationType.request": {
...
			"Title of the first onboarding step explaining security setup"
		],
		"origin": [["src/features/onboarding/screens/introduction-steps.tsx", 24]],
		"translation": "Secure the wallet"
	},
	"settings.selfCustodial.title": {
		"message": "Self-Custodial Mode",
		"placeholders": {},
		"comments": [],
		"origin": [["src/features/menu/DidxSettingsScreen.tsx", 90]],
		"translation": "Self-Custodial Mode"
	},
	"pinSlide.title": {
...
			"Heading shown when user is asked to enter their app PIN to confirm a request"
		],
		"origin": [["src/features/share/slides/PinSlide.tsx", 39]],
		"translation": "Send data with your PIN code"
	},
	"onboarding.biometrics.title": {
		"message": "Set up biometrics",
		"placeholders": {},
		"comments": ["Heading when user sets up biometrics"],
		"origin": [["src/features/onboarding/steps.ts", 30]],
		"translation": "Set up biometrics"
	},
	"common.setUpLater": {
		"message": "Set up later",
		"placeholders": {},
		"comments": [],
		"origin": [["../../packages/translations/src/commonMessages.ts", 17]],
		"translation": "Set up later"
	},
	"onboarding.intro.title": {
...
		"placeholders": {},
		"comments": ["Title for the introduction steps slide in onboarding"],
		"origin": [["src/features/onboarding/steps.ts", 43]],
		"translation": "Set up your wallet"
	},
	"menu.item.settings": {
		"message": "Settings",
		"placeholders": {},
		"comments": ["Label for settings menu item"],
		"origin": [["src/features/menu/FunkeMenuScreen.tsx", 150]],
		"translation": "Settings"
	},
	"settings.title": {
...
		"placeholders": {},
		"comments": [],
		"origin": [["src/utils/sharedPidSetup.ts", 63]],
		"translation": "We need your biometrics to verify your identity."
	},
	"home.welcomeBack": {
		"message": "Welcome back",
		"placeholders": {},
		"comments": [],
		"origin": [["src/features/wallet/DidxHomeScreen.tsx", 36]],
		"translation": "Welcome back"
	},
	"welcome.titleToYourWallet": {
...
		"origin": [
			["src/features/receive/slides/CredentialRetrievalSlide.tsx", 243]
		],
		"translation": "Your cards are not yet ready. We will check once in a while in the background and fetch the cards once they're ready."
	},
	"activity.subtitle": {
		"message": "Your credential history",
		"placeholders": {},
		"comments": [],
		"origin": [["src/features/activity/DidxActivityScreen.tsx", 24]],
		"translation": "Your credential history"
	},
	"cardLifecycle.active.sheetDescription": {
...
