appId: id.paradym.wallet.preview
tags:
  - menu
---
- runFlow: ./issue-none/issue-none-openid4vc.yaml

# Navigate to Activity tab
- tapOn: "Activity"
- assertVisible: "Your credential history"

# Navigate to Credentials tab
- tapOn: "Credentials"
- assertVisible: "Credentials"

# Navigate to Settings tab
- tapOn: "Settings"
- assertVisible: "Self-Custodial Mode"

# Navigate back to Home tab
- tapOn: "Home"
- assertVisible: "Welcome back"
